# digital-jounal-qt

./: CMakeLists.txt  README.md  main.cpp  sample_entries.h
controller/: controller.cpp  controller.h
controller/commands/: addcommand.cpp  addcommand.h  command.h  removecommand.cpp  removecommand.h  updatecommand.cpp  updatecommand.h
controller/filter/: compositefilter.cpp  compositefilter.h  contentfilter.cpp  contentfilter.h  filter.h  titlefilter.cpp  titlefilter.h
journal_test/: journalunifiedtest.cpp  journalunifiedtest.h
model/: journalentry.cpp  journalentry.h
repository/: baserepo.h  csvjournalrepo.cpp  csvjournalrepo.h  jsonjournalrepo.cpp  jsonjournalrepo.h
ui/: app_styles.h  entrydialog.cpp  entrydialog.h  entrydialog.ui  filterdialog.cpp  filterdialog.h  filterdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  removedialog.cpp  removedialog.h  removedialog.ui
